feat(oidc): add alkemio user ID claim to tokens and remove metrics support
